more style tweaks, updated readme, added js for css browser select, styles for safari compatibility, other little style fixes

--- a/README
+++ b/README
@@ -18,3 +18,10 @@ Running
 $ ruby server.rb
 
 (C) 2008 Mike Ferrier (mferrier@gmail.com)
+
+
+
+styles
+=======================
+Style assistance by Shawn Allison.
+Obviously no support for Internet Explorer. Looks great in Firefox 3 and Safari!
